# router/pastes.go
@@ -20,6 +20,7 @@ func RegisterPasteRoutes(rg *gin.RouterGroup, db *gorm.DB) {
 		pastes.GET("/all", pasteHandlers.ListPastes)
 		pastes.GET("/:id", pasteHandlers.GetPaste)
 		pastes.GET("/private/:accessId", pasteHandlers.GetPasteByPrivateAccessID)
+		pastes.POST("/private/batch", pasteHandlers.GetPastesByPrivateAccessIDs)
 		pastes.PUT("", pasteHandlers.UpdatePaste)
 		pastes.DELETE("/:id", pasteHandlers.DeletePaste)
 	}
